medicationの改修
